--- a/_tabs/experience.html
+++ b/_tabs/experience.html
@@ -6,7 +6,10 @@ order: 2
 permalink: /experience/
 ---
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+/>
 
 <section class="xp">
   <header class="xp-hero">
@@ -15,14 +18,13 @@ permalink: /experience/
   </header>
 
   <div class="cards">
-
     <!-- CARD 1 -->
     <article class="card">
       <div class="card-head">
-        <img class="thumb" src="/assets/img/utoronto.png" alt="UofT crest" />
+        <img class="thumb" src="/assets/img/ececlub.jpg" alt="UofT crest" />
         <div class="title">
-          <h3>UofT Alumni Relations</h3>
-          <div class="meta">Convocation & Alumni Reunion Staff</div>
+          <h3>ECE Club</h3>
+          <div class="meta">General Events Manager</div>
         </div>
         <div class="right">
           <span class="date">2025 — Present</span>
@@ -31,7 +33,47 @@ permalink: /experience/
 
       <div class="card-body">
         <p class="blurb">
-          Supported UofT alumni reunions and convocation as part of the event staff team — helping things run smoothly while welcoming new alumni into the community.
+          Supported ECE Club by planning and executing events.
+        </p>
+        <ul class="bullets">
+          <li>
+            Leading planning and execution of departmental events, boosting
+            student engagement across ECE
+          </li>
+          <li>
+            Collaborating with other directors to manage budgets, logistics, and
+            marketing materials. .
+          </li>
+          <li>
+            Strengthened community presence through well-organized academic and
+            social initiatives.
+          </li>
+        </ul>
+        <div class="tags">
+          <span>UofT</span><span>ECE</span><span>General Events</span
+  
+        </div>
+      </div>
+    </article>
+
+    <!-- CARD 2 -->
+    <article class="card">
+      <div class="card-head">
+        <img class="thumb" src="/assets/img/utoronto.png" alt="UofT crest" />
+        <div class="title">
+          <h3>UofT Alumni Relations</h3>
+          <div class="meta">Convocation & Alumni Reunion Staff</div>
+        </div>
+        <div class="right">
+          <span class="date">2025 — 2026</span>
+        </div>
+      </div>
+
+      <div class="card-body">
+        <p class="blurb">
+          Supported UofT alumni reunions and convocation as part of the event
+          staff team — helping things run smoothly while welcoming new alumni
+          into the community.
         </p>
         <ul class="bullets">
           <li>On-the-day event help and coordination.</li>
@@ -40,7 +82,8 @@ permalink: /experience/
           <li>Created convocation pins and handed them out.</li>
         </ul>
         <div class="tags">
-          <span>UofT</span><span>Alumni</span><span>Convocation</span><span>Event Staff</span><span>Photography</span>
+          <span>UofT</span><span>Alumni</span><span>Convocation</span
+          ><span>Event Staff</span><span>Photography</span>
         </div>
       </div>
     </article>
@@ -48,7 +91,11 @@ permalink: /experience/
     <!-- CARD 2 -->
     <article class="card">
       <div class="card-head">
-        <img class="thumb" src="/assets/img/eureka.png" alt="Eureka! Hacks logo" />
+        <img
+          class="thumb"
+          src="/assets/img/eureka.png"
+          alt="Eureka! Hacks logo"
+        />
         <div class="title">
           <h3>Eureka! Hacks</h3>
           <div class="meta">Logistics Manager</div>
@@ -60,16 +107,22 @@ permalink: /experience/
 
       <div class="card-body">
         <p class="blurb">
-          Served as Logistics Manager for Eureka! Hacks, a full-day hackathon — ensuring smooth operations, time management, and reliable support throughout the event.
+          Served as Logistics Manager for Eureka! Hacks, a full-day hackathon —
+          ensuring smooth operations, time management, and reliable support
+          throughout the event.
         </p>
         <ul class="bullets">
           <li>Managed the hour-to-hour schedule for the full-day hackathon.</li>
-          <li>Handled on-day emergency management and quick problem solving.</li>
+          <li>
+            Handled on-day emergency management and quick problem solving.
+          </li>
           <li>Coordinated and verified food orders for all participants.</li>
           <li>Ensured all logistics ran smoothly from start to finish.</li>
         </ul>
         <div class="tags">
-          <span>Hackathon</span><span>Logistics</span><span>Event Management</span><span>Leadership</span><span>Teamwork</span>
+          <span>Hackathon</span><span>Logistics</span
+          ><span>Event Management</span><span>Leadership</span
+          ><span>Teamwork</span>
         </div>
       </div>
     </article>
@@ -89,129 +142,228 @@ permalink: /experience/
 
       <div class="card-body">
         <p class="blurb">
-          Led a year-long capstone project where our team was hired by a local elementary school STEM teacher to solve the lack of safe and convenient power outlets in classrooms.
+          Led a year-long capstone project where our team was hired by a local
+          elementary school STEM teacher to solve the lack of safe and
+          convenient power outlets in classrooms.
         </p>
         <ul class="bullets">
           <li>Managed a multi-student team throughout a full academic year.</li>
-          <li>Researched and developed safe, risk-aware solutions for classroom use.</li>
-          <li>Coordinated with the client (STEM teacher) to gather requirements and feedback.</li>
-          <li>Delivered a viable, convenient design addressing both safety and usability.</li>
+          <li>
+            Researched and developed safe, risk-aware solutions for classroom
+            use.
+          </li>
+          <li>
+            Coordinated with the client (STEM teacher) to gather requirements
+            and feedback.
+          </li>
+          <li>
+            Delivered a viable, convenient design addressing both safety and
+            usability.
+          </li>
         </ul>
         <div class="tags">
-          <span>Project Management</span><span>STEM</span><span>Teamwork</span><span>Safety Design</span><span>Client Collaboration</span>
+          <span>Project Management</span><span>STEM</span><span>Teamwork</span
+          ><span>Safety Design</span><span>Client Collaboration</span>
         </div>
       </div>
     </article>
-
   </div>
 </section>
 
 <style>
   /* Improve cross-browser legibility, esp. on iOS */
-  html { -webkit-text-size-adjust: 100%; text-size-adjust: 100%; }
-  * { -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; }
-
-  :root{
-    /* Dark defaults */
-    --fg:#f3f4f6;            /* Main text */
-    --muted:#c7cbd1;         /* Secondary text */
-    --bg:#0b0b0c;            /* Page background (if used) */
-    --card:#14161a;          /* Card background (high contrast) */
-    --chip:#1d2128;          /* Tag background */
-    --line: rgba(255,255,255,.14);
-    --accent:#0ea5e9;
-    --ring: rgba(14,165,233,.35);
+  html {
+    -webkit-text-size-adjust: 100%;
+    text-size-adjust: 100%;
+  }
+  * {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
   }
 
-  @media (prefers-color-scheme: light){
-    :root{
-      --fg:#111827;
-      --muted:#6b7280;
-      --bg:#ffffff;
-      --card:#ffffff;
-      --chip:#f3f4f6;
-      --line: rgba(17,24,39,.08);
-      --accent:#0ea5e9;
-      --ring: rgba(14,165,233,.20);
+  :root {
+    /* Dark defaults */
+    --fg: #f3f4f6; /* Main text */
+    --muted: #c7cbd1; /* Secondary text */
+    --bg: #0b0b0c; /* Page background (if used) */
+    --card: #14161a; /* Card background (high contrast) */
+    --chip: #1d2128; /* Tag background */
+    --line: rgba(255, 255, 255, 0.14);
+    --accent: #0ea5e9;
+    --ring: rgba(14, 165, 233, 0.35);
+  }
+
+  @media (prefers-color-scheme: light) {
+    :root {
+      --fg: #111827;
+      --muted: #6b7280;
+      --bg: #ffffff;
+      --card: #ffffff;
+      --chip: #f3f4f6;
+      --line: rgba(17, 24, 39, 0.08);
+      --accent: #0ea5e9;
+      --ring: rgba(14, 165, 233, 0.2);
     }
   }
 
-  .xp{ max-width: 920px; margin: 3rem auto; padding: 0 1rem; color: var(--fg); }
-  .xp-hero{ text-align: center; margin-bottom: 1.8rem; }
-  .xp-hero h1{ font-size: 2rem; margin: 0 0 .35rem; letter-spacing: .2px; }
-  .xp-hero p{ color: var(--muted); margin: 0; }
+  .xp {
+    max-width: 920px;
+    margin: 3rem auto;
+    padding: 0 1rem;
+    color: var(--fg);
+  }
+  .xp-hero {
+    text-align: center;
+    margin-bottom: 1.8rem;
+  }
+  .xp-hero h1 {
+    font-size: 2rem;
+    margin: 0 0 0.35rem;
+    letter-spacing: 0.2px;
+  }
+  .xp-hero p {
+    color: var(--muted);
+    margin: 0;
+  }
 
-  .cards{ display: grid; gap: 1rem; }
+  .cards {
+    display: grid;
+    gap: 1rem;
+  }
 
-  .card{
-    background: var(--card);                 /* solid, high-contrast */
+  .card {
+    background: var(--card); /* solid, high-contrast */
     border: 1px solid var(--line);
     border-radius: 16px;
     overflow: clip;
-    box-shadow: 0 6px 18px rgba(0,0,0,.18);
-    transition: transform .12s ease, box-shadow .12s ease, border-color .12s ease;
-    color: var(--fg);                        /* ensure card text is visible */
+    box-shadow: 0 6px 18px rgba(0, 0, 0, 0.18);
+    transition:
+      transform 0.12s ease,
+      box-shadow 0.12s ease,
+      border-color 0.12s ease;
+    color: var(--fg); /* ensure card text is visible */
   }
-  .card:hover{
+  .card:hover {
     transform: translateY(-2px);
-    box-shadow: 0 10px 24px rgba(0,0,0,.24);
+    box-shadow: 0 10px 24px rgba(0, 0, 0, 0.24);
     border-color: var(--ring);
   }
 
-  .card-head{
+  .card-head {
     display: grid;
     grid-template-columns: 60px 1fr auto;
     align-items: center;
     gap: 1rem;
-    padding: 1rem 1rem .6rem;
+    padding: 1rem 1rem 0.6rem;
   }
-  .thumb{
-    width: 60px; height: 60px; border-radius: 14px; object-fit: cover;
-    border: 1px solid var(--line); background: var(--chip);
+  .thumb {
+    width: 60px;
+    height: 60px;
+    border-radius: 14px;
+    object-fit: cover;
+    border: 1px solid var(--line);
+    background: var(--chip);
   }
-  .title h3{ margin: 0; font-size: 1.08rem; line-height: 1.25; }
-  .meta{ color: var(--muted); font-size: .95rem; margin-top: .18rem; }
-  .right{ color: var(--muted); font-size: .95rem; white-space: nowrap; }
+  .title h3 {
+    margin: 0;
+    font-size: 1.08rem;
+    line-height: 1.25;
+  }
+  .meta {
+    color: var(--muted);
+    font-size: 0.95rem;
+    margin-top: 0.18rem;
+  }
+  .right {
+    color: var(--muted);
+    font-size: 0.95rem;
+    white-space: nowrap;
+  }
 
-  .card-body{
+  .card-body {
     padding: 0 1rem 1rem 1rem;
   }
-  .blurb{ margin: .2rem 0 .7rem; }
-  .bullets{ margin: 0 0 .6rem 1.2rem; }
-  .bullets li{ margin: .34rem 0; }
-  .tags{ display:flex; flex-wrap:wrap; gap: .45rem; margin-top: .2rem; }
-  .tags span{
-    font-size: .82rem; padding: .36rem .6rem; border-radius: 999px;
-    background: var(--chip); border: 1px solid var(--line); color: var(--fg);
+  .blurb {
+    margin: 0.2rem 0 0.7rem;
+  }
+  .bullets {
+    margin: 0 0 0.6rem 1.2rem;
+  }
+  .bullets li {
+    margin: 0.34rem 0;
+  }
+  .tags {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.45rem;
+    margin-top: 0.2rem;
+  }
+  .tags span {
+    font-size: 0.82rem;
+    padding: 0.36rem 0.6rem;
+    border-radius: 999px;
+    background: var(--chip);
+    border: 1px solid var(--line);
+    color: var(--fg);
   }
 
   /* Fancy heading underline */
-  .xp-hero h1{
-    position: relative; display: inline-block; padding-bottom: .2rem;
+  .xp-hero h1 {
+    position: relative;
+    display: inline-block;
+    padding-bottom: 0.2rem;
   }
-  .xp-hero h1::after{
-    content: ""; position: absolute; left: 50%; bottom: 0; transform: translateX(-50%);
-    width: 84px; height: 2px; background: linear-gradient(90deg, transparent, var(--accent), transparent);
+  .xp-hero h1::after {
+    content: "";
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    transform: translateX(-50%);
+    width: 84px;
+    height: 2px;
+    background: linear-gradient(90deg, transparent, var(--accent), transparent);
   }
 
   /* Accessibility focus styles */
-  .card:focus-within{
-    outline: 2px solid var(--accent); outline-offset: 2px;
-    box-shadow: 0 0 0 6px var(--ring), 0 10px 24px rgba(0,0,0,.24);
+  .card:focus-within {
+    outline: 2px solid var(--accent);
+    outline-offset: 2px;
+    box-shadow:
+      0 0 0 6px var(--ring),
+      0 10px 24px rgba(0, 0, 0, 0.24);
   }
 
   /* Mobile readability tweaks */
-  @media (max-width: 560px){
-    .card-head{ grid-template-columns: 52px 1fr auto; padding: .9rem .9rem .55rem; gap: .8rem; }
-    .thumb{ width: 52px; height: 52px; border-radius: 12px; }
-    .card-body{ padding: 0 .9rem .9rem .9rem; }
-    .meta, .right { font-size: 0.98rem; }  /* slightly larger */
-    .bullets li { line-height: 1.45; }
+  @media (max-width: 560px) {
+    .card-head {
+      grid-template-columns: 52px 1fr auto;
+      padding: 0.9rem 0.9rem 0.55rem;
+      gap: 0.8rem;
+    }
+    .thumb {
+      width: 52px;
+      height: 52px;
+      border-radius: 12px;
+    }
+    .card-body {
+      padding: 0 0.9rem 0.9rem 0.9rem;
+    }
+    .meta,
+    .right {
+      font-size: 0.98rem;
+    } /* slightly larger */
+    .bullets li {
+      line-height: 1.45;
+    }
   }
 
   /* Users who force dark mode on mobile but the site is light — keep contrast high */
-  @media (prefers-contrast: more){
-    :root{ --muted: color-mix(in oklab, var(--fg) 70%, transparent); }
-    .card{ border-color: var(--ring); }
+  @media (prefers-contrast: more) {
+    :root {
+      --muted: color-mix(in oklab, var(--fg) 70%, transparent);
+    }
+    .card {
+      border-color: var(--ring);
+    }
   }
 </style>
