--- a/_tabs/experience.html
+++ b/_tabs/experience.html
@@ -93,7 +93,7 @@ permalink: /experience/
       <div class="card-head">
         <img
           class="thumb"
-          src="/assets/img/eureka.png"
+          src="{{ '/assets/img/eureka.png' | relative_url }}"
           alt="Eureka! Hacks logo"
         />
         <div class="title">
