--- a/_tabs/projects.html
+++ b/_tabs/projects.html
@@ -3,7 +3,7 @@ layout: page
 title: Projects
 icon: fas fa-computer
 order: 2
-permalink: /projects/
+permalink: /Experience/
 ---
 
 <link
@@ -53,7 +53,7 @@ permalink: /projects/
       <div class="card-head">
         <img
           class="thumb"
-          src="/assets/img/fpga.jpg"
+          src="{{ '/assets/img/fpga.jpg' | relative_url }}"
           alt="Eureka! Hacks logo"
         />
         <div class="title">
