--- a/_tabs/aboutme.html
+++ b/_tabs/aboutme.html
@@ -39,9 +39,10 @@ permalink: /aboutme/
     </div>
 
 <div class="cta-links">
-  <a class="cta " href="/projects/">Projects</a>
-  <a class="cta" href="/experience/">Experience</a>
-  <a class="cta" href="/photography/">Photography</a>
+  <a href="{{ '/projects/' | relative_url }}">Projects</>
+  <a href="{{ '/experience/' | relative_url }}">Experience</a>
+  <a href="{{ '/projects/' | relative_url }}">Projects</a>
+  <a href="{{ '/photography/' | relative_url }}">Photography</a>
 </div>  </aside>
 
   <!-- Main Content -->
