--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ permalink: /
     </a>
   </div>
 
-  <a href="/aboutme/" class="about-button">Find more here →</a>
+  <a {{ '/aboutme/' | relative_url }} class="about-button">Find more here →</a>
 </div>
 
 <!-- ⌨️ Typed.js Script -->
