--- a/_tabs/aboutme.html
+++ b/_tabs/aboutme.html
@@ -16,7 +16,7 @@ permalink: /aboutme/
   <aside class="profile-card">
     <div class="pfp">
       <img
-        src="/assets/img/avatar.png"
+        src="{{ '/assets/img/avatar.png' | relative_url }}"
         alt="Zain in a suit portrait"
         loading="eager"
       />
@@ -74,7 +74,7 @@ permalink: /aboutme/
     <!-- Photo Banner -->
     <section class="photo-banner">
       <img
-        src="/assets/img/photo.png"
+        src="{{ '/assets/img/photo.png' | relative_url }}"
         alt="Zain shooting a photo"
         loading="lazy"
       />
